hphp/hack/test/typecheck/is_expression/valid_hint_class3.php.like_types.exp
File "valid_hint_class3.php", line 12, characters 5-15:
  exact C<[unresolved]>
File "valid_hint_class3.php", line 10, characters 20-21:
Invalid argument (Typing[4110])
File "valid_hint_class3.php", line 16, characters 25-33:
Expected C<~string>
File "valid_hint_class3.php", line 9, characters 13-21:
But got (<expr#1> & C<[unresolved]>) from this is expression test
File "valid_hint_class3.php", line 9, characters 13-21:
Invalid "is" expression hint (Typing[4195])
File "valid_hint_class3.php", line 9, characters 13-21:
The "is" operator cannot be used with a type with an erased generic type argument
